Grok changes
************

1.8 (unreleased)
================

- Nothing changed yet.


1.7 (2011-05-26)
================

- Directly depend on zope.app.wsgi and configure it too to have the useful
  IResult adapters for (temporary) files registered.

- Import grokcore.component.global_adapter too.

1.6 (2011-04-04)
================

- Fix tests that relied on older versions of zope.testbrowser.

- Added grok.index.Value component.

1.5 (2011-02-14)
================

- Added import for Subscription and MultiSubscription components.

1.4.3 (2011-02-08)
==================

- Fix tests now that error views no longer by default provide ISystemErrorView.

1.4.2 (2011-01-20)
==================

- Should've listed IApplication as part of the grok API too.

1.4.1 (2011-01-20)
==================

- Grok should still provide IApplication in the grok API, even now that it
  got moved to grokcore.site.interfaces.

1.4 (2011-01-20)
================

- Define error view baseclasses for IException, INotFound and IUnauthorized
  errors: grok.ExceptionView, grok.NotFoundView, grok.UnauthorizedView. Lifts
  the indirect dependency on zope.app.http and zope.app.exception.

- Moved the XMLRPC, REST component into separate packages
  grokcore.xmlrpc and grokcore.rest. Consequently the custom traverse
  components that Grok defined were moved to grokcore.traverser. Grok
  the-python-package acts more and more like an import-hub.

- To build the docs we now use `collective.recipe.sphinxbuilder`
  instead of our own, early hack (get rid of `grokdocs`
  subpackage). Buildout now generates ``grokdocs2html`` and
  ``grokdocs2pdf`` which should do what you think they do.

- The `IApplication` interface, and getApplication() moved to
  ``grokcore.site``.

1.3 (2010-11-03)
================

- The `IGrokSecurityView` interface has been to ``grokcore.view``.

- The `make_checker` util function has been moved to ``grokcore.view``.

- The base publisher has been moved to ``grokcore.view`` as an